# lct-2024

./: README.md  pyproject.toml  requirements.txt
notebooks/: baseline.ipynb  baseline_core.ipynb  embeddings.ipynb
notebooks/drafts/: Baseline_hackathon.ipynb  Dial_embs.ipynb  Geo_embs.ipynb  Transactions_embs.ipynb
src/lct_2024/: utils.py
